--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "animejs": "^2.2.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-ga": "^2.5.0",
     "react-scripts": "1.1.4"
   },
   "scripts": {
